--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       retries: 5
   app:
     build: .
+    command: ["./entrypoint.sh"]
     ports:
       - "8000:8000"
     environment:
@@ -27,6 +28,8 @@ services:
       DJANGO_SUPERUSER_USERNAME: ${DJANGO_SUPERUSER_USERNAME}
       DJANGO_SUPERUSER_PASSWORD: ${DJANGO_SUPERUSER_PASSWORD}
       DJANGO_SUPERUSER_EMAIL: ${DJANGO_SUPERUSER_EMAIL}
+      DJANGO_SETTINGS_MODULE: DiplomNetologyGjango.settings
+      DJANGO_DEBUG: "True"
     depends_on:
       db:
         condition: service_healthy
