--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,17 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+
+  redis:
+    container_name: diplom-redis
+    image: redis:alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+
   app:
+    container_name: diplom-app
     build: .
     command: ["./entrypoint.sh"]
     ports:
@@ -30,18 +40,58 @@ services:
       DJANGO_SUPERUSER_EMAIL: ${DJANGO_SUPERUSER_EMAIL}
       DJANGO_SETTINGS_MODULE: DiplomNetologyGjango.settings
       DJANGO_DEBUG: "True"
+      CELERY_BROKER_URL: redis://redis:6379/0
+      CELERY_RESULT_BACKEND: redis://redis:6379/0
     depends_on:
       db:
         condition: service_healthy
-    develop:
-      watch:
-        - action: sync
-          path: .
-          target: /app
-          ignore:
-            - .venv/
-        - action: rebuild
-          path: ./pyproject.toml
+      redis:
+        condition: service_started
+    volumes:
+      - ./logs:/logs
+
+  celery-worker:
+    container_name: diplom-celery-worker
+    build: .
+    command: celery -A DiplomNetologyGjango worker --loglevel=INFO
+    environment:
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_NAME: ${DB_NAME}
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      DJANGO_SETTINGS_MODULE: DiplomNetologyGjango.settings
+      CELERY_BROKER_URL: redis://redis:6379/0
+      CELERY_RESULT_BACKEND: redis://redis:6379/0
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
+    volumes:
+      - ./logs:/logs
+
+  celery-beat:
+    container_name: diplom-celery-beat
+    build: .
+    command: celery -A DiplomNetologyGjango beat --loglevel=INFO --scheduler django_celery_beat.schedulers.DatabaseScheduler
+    environment:
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_NAME: ${DB_NAME}
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      DJANGO_SETTINGS_MODULE: DiplomNetologyGjango.settings
+      CELERY_BROKER_URL: redis://redis:6379/0
+      CELERY_RESULT_BACKEND: redis://redis:6379/0
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
+    volumes:
+      - ./logs:/logs
 
 volumes:
   postgres-data:
+  redis-data:
