--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,8 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "djangorestframework-simplejwt>=5.5.1",
     "pyjwt>=2.10.1",
-    "celery>=5.5.3",
-    "redis>=7.0.1",
-    "django-celery-beat>=2.8.1",
+    "celery[redis]>=5.3.0",
+    "django-celery-beat>=2.5.0",
     "drf-spectacular>=0.28.0",
 ]
 
