--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
   app:
     container_name: diplom-app
     build: .
-    command: ["./entrypoint.sh"]
+    entrypoint: ./entrypoint.sh
     ports:
       - "8000:8000"
     environment:
@@ -59,7 +59,10 @@ services:
   celery-worker:
     container_name: diplom-celery-worker
     build: .
-    command: celery -A DiplomNetologyGjango worker --loglevel=INFO
+    entrypoint: ./entrypoint-celery-worker.sh
+    volumes:
+      - .:/app
+      - ./logs:/logs
     environment:
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
@@ -80,13 +83,14 @@ services:
         condition: service_healthy
       redis:
         condition: service_started
-    volumes:
-      - ./logs:/logs
 
   celery-beat:
     container_name: diplom-celery-beat
     build: .
-    command: celery -A DiplomNetologyGjango beat --loglevel=INFO --scheduler django_celery_beat.schedulers.DatabaseScheduler
+    entrypoint: ./entrypoint-celery-beat.sh
+    volumes:
+      - .:/app
+      - ./logs:/logs
     environment:
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
@@ -107,8 +111,7 @@ services:
         condition: service_healthy
       redis:
         condition: service_started
-    volumes:
-      - ./logs:/logs
+
 
 volumes:
   postgres-data:
