--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,3 @@
-[build-system]
-requires = ["setuptools>=61", "wheel"]
-build-backend = "setuptools.build_meta"
-
 [project]
 name = "diplomnetologygjango"
 version = "0.1.0"
@@ -22,25 +18,9 @@ dependencies = [
     "celery[redis]>=5.3.0",
     "django-celery-beat>=2.5.0",
     "drf-spectacular>=0.28.0",
-    "django-autoslug>=1.9.9",
     "uvicorn>=0.38.0",
-    "redis>=4.5",
-]
-
-[tool.setuptools.packages.find]
-include = [
-    "backend",
-    "DiplomNetologyGjango",
-    "backend.*",
-    "DiplomNetologyGjango.*"
-]
-exclude = [
-    "app",
-    "logs",
-    "templates",
-    "staticfiles",
-    ".*",
-    "tests",
+    "celery-types==0.23.0",
+    "django-autoslug>=1.9.9",
 ]
 
 [project.optional-dependencies]
