--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "celery-types==0.23.0",
     "django-autoslug>=1.9.9",
     "drf-spectacular>=0.29.0",
+    "pyyaml>=6.0.3",
 ]
 
 [project.optional-dependencies]
