--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,10 @@ dependencies = [
 dev = [
     "pytest>=8.4.2",
     "ruff>=0.6.2",
-    "pytest-django",
     "django-debug-toolbar",
+    "factory-boy>=3.3.3",
+    "pytest-django>=4.11.1",
+    "requests>=2.32.5",
 ]
 [tool.ruff]
 target-version = "py312"
@@ -94,3 +96,8 @@ convention = "google"
 
 [tool.ruff.format]
 quote-style = "double"
+
+[dependency-groups]
+dev = [
+
+]
