--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "drf-spectacular>=0.29.0",
     "pyyaml>=6.0.3",
     "locust>=2.41.6",
+    "djangorestframework-stubs>=3.16.6",
 ]
 
 [project.optional-dependencies]
